name:                octarine-sapient-walnut
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/orclev/octarine-sapient-walnut#readme
license:             BSD3
license-file:        LICENSE
author:              R. Kyle Murphy
maintainer:          orclev@gmail.com
copyright:           R. Kyle Murphy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant
                     , wai
                     , warp
                     , time
                     , stm
                     , mtl
                     , either
  default-language:    Haskell2010

executable octarine-sapient-walnut-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , octarine-sapient-walnut
  default-language:    Haskell2010

test-suite octarine-sapient-walnut-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , octarine-sapient-walnut
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/orclev/octarine-sapient-walnut
